# profile.mobile.apps.native.my-account

./: CMakeLists.txt  INSTALL  project.config  setting-myaccount-efl.xml  tags
data/edc/: CMakeLists.txt  myaccount.edc  myaccount_edc_images.edc  myaccount_nocontent.edc
include/: myaccount_ug.h  myaccount_ug_account_list.h  myaccount_ug_addaccount.h  myaccount_ug_common.h  myaccount_ug_main.h
packaging/: my-account.spec
po/: CMakeLists.txt  ar.po  az.po  bg.po  ca.po  cs.po  da.po  de.po  el_GR.po  en.po  en_PH.po  es_ES.po  es_US.po  et.po  eu.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  hi.po  hr.po  hu.po  hy.po  is.po  it_IT.po  ja_JP.po  ka.po  kk.po  ko_KR.po  lt.po  lv.po  mk.po  nb.po  nl.po  pl.po  pt_BR.po  pt_PT.po  ro.po  ru_RU.po  (+10 more)
src/: myaccount_ug_account_list.c  myaccount_ug_addaccount.c  myaccount_ug_common.c  myaccount_ug_main.c
